--- a/style.css
+++ b/style.css
@@ -3,3 +3,23 @@ body{
    background-size: 100% 100%;
    background-attachment: fixed;
 }
+
+.nav-spacing {
+   margin-right: 500px; /* Ajusta este valor según sea necesario */
+}
+
+.nav-item:last-child {
+   margin-right: 0; /* Elimina el margen derecho del último elemento */
+}
+
+.navbar-nav h1 {
+   font-size: 1.25rem; /* Ajusta el tamaño de la fuente según sea necesario */
+   margin: 0; /* Elimina cualquier margen adicional */
+   line-height: 1.5; /* Ajusta la altura de la línea para mejorar la legibilidad */
+}
+
+.dropdown-item h2 {
+   font-size: 1rem; /* Ajusta el tamaño de la fuente en los elementos del dropdown */
+   margin: 0; /* Elimina cualquier margen adicional */
+   line-height: 1.5; /* Ajusta la altura de la línea para mejorar la legibilidad */
+}
